--- a/test.html
+++ b/test.html
@@ -7,35 +7,65 @@
     <title>Charts</title>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
+    <style>
+        span.a {
+          display: inline-block;
+          width: 1200px;
+          height: 500px;
+          padding: 5px;
+          border: 1px rgba(255, 255, 0, 0);
+          background-color: rgba(255, 255, 0, 0);
+        }
+        .treemap-container,
+        .bubble-container {
+          width: 100%; 
+          height: 100%; 
+        }
+        #myTreemap,
+        #myBubble {
+          width: 100%;
+          height: 100%;
+        }
+    </style>
 </head>
-
 <body>
+
+    <fieldset>
+        <h3>2023 Movies Dashboard</h3>  
+        <select id=bg>
+          <option value="0">Worldwide</option>
+          <option value="1">Domestic</option>
+        </select>
+      </fieldset>
+
     <div class="container">
         <div class="row">
             <div class="col-md-12 jumbotron text-center" style="font-family: Verdana;">
                 <h1>2023 Worldwide Box Office Dashboard</h1>
             </div>
         </div>
-
         <div class="row">
             <div class="col-md-12">
                 <div id="myBar"></div>
             </div>
         </div>
-
         <div class="row">
             <div class="col-md-6">
-                <div id="myTreemap" style="width: 50%;"></div>
+                <span class="a"> <!-- treemp box -->
+                    <div class="treemap-container"> <!-- Container for the treemap -->
+                        <div id="myTreemap"></div> <!-- Treemap goes here -->
+                    </div>
+                </span>
+                <span class="a"> <!-- bubble box -->
+                    <div class="bubble-container"> <!-- Container for the bubble chart -->
+                        <div id="myBubble"></div> <!-- Bubble chart goes here -->
+                    </div>
+                </span>
             </div>
-            <div class="col-md-6">
-                <div id="myBubble" style="width: 50%;"></div>
-            </div>
-        </div>
+        </div>      
     </div>
-
     <script src="test_bar.js"></script>
     <script src="test_treemap.js"></script>
     <script src="test_bubble.js"></script>
 </body>
 </html>
-
