--- a/movies.html
+++ b/movies.html
@@ -34,7 +34,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-md-12 jumbotron text-center" style="font-family: Verdana;text-align: center;">
+            <div class="col-md-12 jumbotron text-center" style="font-family: Verdana;text-align: center; color: rgb(77, 88, 99)">
                 <h1>2023 Worldwide Box Office Dashboard</h1>
             </div>
         </div>
